@@ -131,3 +131,11 @@ This exports the named graph mygraph into the xgmml file *mygraph.xgmml* without
     unix> arangoexport --type xgmml --graph-name mygraph --xgmml-label-attribute name
 
 This exports the named graph mygraph into the xgmml file *mygraph.xgmml* with a label from documents attribute *name* instead of the default attribute *label*.
+
+Export via AQL query
+--------------------
+
+    unix> arangoexport --type jsonl --query "for book in books filter book.sells > 100 return book"
+
+Export via an aql query allows you to export the returned data as the type specified with *--type*.
+The example exports all books as jsonl that are sold more than 100 times.
